--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/googlepay": "^0.6.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "ts-loader": "^9.2.6",
